src/objects/ACET_Questionnaire__mdt.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_No__c</fullName>
        <label>If No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes__c</fullName>
        <label>If Yes</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <label>Options</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                    <default>true</default>
                    <label>Question</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>ACET Questionnaire</label>
    <listViews>
        <fullName>PA_Check</fullName>
        <columns>Category__c</columns>
        <columns>MasterLabel</columns>
        <columns>Value__c</columns>
        <columns>If_Yes__c</columns>
        <columns>If_No__c</columns>
        <columns>Type__c</columns>
        <columns>Options__c</columns>
        <filterScope>Everything</filterScope>
        <label>PA Check</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>ACET Questionnaires</pluralLabel>
</CustomObject>